# shrink-my-url

./: .gitignore  Cargo.toml  README.md  clean  go.mod  main.go  run  setup
internal/core/domain/: model.go
internal/core/ports/: ports.go
internal/core/services/: minify.go
src/: adapters.rs  domain.rs  errors.rs  lib.rs  main.rs  routes.rs  templates.rs
src/adapters/: api.rs  repository.rs
src/adapters/api/: index.rs  minify.rs
src/adapters/repository/: mem_map.rs
src/domain/: encoders.rs  minify.rs
templates/: hello.html  index.html
templates/components/: minified_url.html  minify_form.html
templates/components/shared/: input.html
